# 3D-Renderer

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
contrib/: CMakeLists.txt
example/: CMakeLists.txt  main.cpp
src/: CMakeLists.txt  main.cpp
src/renderer/: CMakeLists.txt
src/renderer/camera/: CMakeLists.txt  camera.cpp  camera.h
src/renderer/object/: CMakeLists.txt  object.cpp  object.h  vertex.cpp  vertex.h
src/renderer/projector/: CMakeLists.txt  projector.cpp  projector.h
src/renderer/rasterizer/: CMakeLists.txt
src/renderer/utils/: CMakeLists.txt  constants.h  linalg.cpp  linalg.h
src/renderer/world/: CMakeLists.txt  world.cpp  world.h
